--- a/layouts/index.html
+++ b/layouts/index.html
@@ -81,6 +81,15 @@
       </div>
     </div>
   </div>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9VVH8CJWV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W9VVH8CJWV');
+</script>
 </section>
 {{ end }}
 <!-- End Header -->
